# torrra

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt  torrra.spec
.github/: funding.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: aur-publish.yml  build-binaries.yml  ci.yml  docker-publish.yml  release.yml
docs/: conf.py  configuration.md  contributing.md  index.md  indexers.md  installation.md  requirements.txt  usage.md
docs/_build/doctrees/: configuration.doctree  environment.pickle  index.bak.doctree  index.doctree  indexers.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  configuration.html  genindex.html  index.bak.html  index.html  indexers.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.bak.rst.txt  index.md.txt  usage.md.txt
docs/dev/: contributing.md
docs/development/: roadmap.md
docs/guide/: indexers.md
pkgbuild-template/torrra/: PKGBUILD
pkgbuild-template/torrra-bin/: PKGBUILD
scripts/: bump_version.py
src/torrra/: __main__.py  _types.py  app.css  app.py  app.tcss  config.py  context.py
src/torrra/cli/: config.py  main.py  torrent.py
src/torrra/commands/: config.py
src/torrra/core/: cache.py  config.py  constants.py  context.py  db.py  download.py  exceptions.py  history.py  searcher.py  torrent.py  torrent_manager.py
src/torrra/downloaders/: __init__.py  base.py  internal.py  transmission.py  web_browser.py
src/torrra/indexers/: base.py  jackett.py  magnetdl.py  movierulz.py  prowlarr.py  utils.py  yts.py
src/torrra/providers/: jackett.py  prowlarr.py
src/torrra/screens/: home.py  search.css  search.py  search.tcss  theme_selector.py  theme_switcher.py  welcome.css  welcome.py
src/torrra/utils/: cli.py  direct_download.py  fs.py  helpers.py  indexer.py  magnet.py  provider.py
src/torrra/widgets/: data_table.py  details_panel.py  downloads.py  downloads_content.py  search.py  search_content.py  sidebar.py  spinner.py
tests/: conftest.py  test_cli.py  test_core_cache.py  test_core_config.py  test_indexers.py  test_screens_welcome.py  test_utils.py  test_utils_magnet.py
tests/screens/: test_home.py  test_search.py  test_theme_selector.py  test_theme_switcher.py  test_welcome.py
tests/snapshots/: test_screens.py
tests/snapshots/__snapshots__/test_screens/: test_home_screen_snapshot.raw  test_search_screen_snapshot.raw  test_theme_selector_screen_snapshot.raw  test_welcome_screen_snapshot.raw
venv_fix/: pyvenv.cfg
