[project]
name = "torrra"
version = "1.2.0"
description = "A Python tool that lets you find and download torrents without leaving your CLI."
readme = "README.md"
authors = [{ name = "stabldev", email = "thestabldev@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.13"

keywords = [
    "torrent",
    "cli",
    "download",
    "p2p",
    "libtorrent",
    "jackett",
    "magnet",
    "terminal",
    "filesharing",
    "torrent-client",
    "textual",
    "tui",
    "torrent-search",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet",
    "Topic :: Terminals",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]

dependencies = [
    "click>=8.2.1",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "libtorrent>=2.0.11",
    "libtorrent-windows-dll>=0.0.2; sys_platform == 'win32'",
    "platformdirs>=4.3.8",
    "textual>=4.0.0",
    "tomli-w>=1.2.0",
]

[project.urls]
homepage = "https://github.com/stabldev/torrra"
repository = "https://github.com/stabldev/torrra"
"Bug Tracker" = "https://github.com/stabldev/torrra/issues"

[project.scripts]
torrra = "torrra.__main__:cli"

[project.optional-dependencies]
docs = [
    "furo>=2025.7.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-copybutton>=0.5.2",
]

[dependency-groups]
dev = ["libtorrent-stubs>=0.0.1", "textual-dev>=1.7.0"]

[tool.pyright]
reportUnusedCallResult = "none"
reportExplicitAny = "none"
reportAny = "none"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
