[project]
name = "torrra"
version = "2.0.4"
description = "A Python tool that lets you find and download torrents without leaving your CLI."
readme = "README.md"
authors = [{ name = "stabldev", email = "thestabldev@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "torrent",
    "cli",
    "download",
    "p2p",
    "libtorrent",
    "jackett",
    "magnet",
    "terminal",
    "filesharing",
    "torrent-client",
    "textual",
    "tui",
    "torrent-search",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: File Sharing",
    "Topic :: Terminals",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
dependencies = [
    "click>=8.3.0",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "libtorrent>=2.0.11",
    "libtorrent-windows-dll>=0.0.3",
    "platformdirs>=4.5.0",
    "textual>=6.5.0",
    "tomli-w>=1.2.0",
    "tomli; python_version < '3.11'",
]

[project.urls]
homepage = "https://github.com/stabldev/torrra"
repository = "https://github.com/stabldev/torrra"
"Bug Tracker" = "https://github.com/stabldev/torrra/issues"

[project.scripts]
torrra = "torrra.__main__:cli"

[project.optional-dependencies]
docs = [
    "myst-parser>=4.0.1",
    "qiskit-sphinx-theme>=2.0.0",
    "sphinx>=8,<9",
    "sphinx-copybutton>=0.5.2",
]

[dependency-groups]
dev = [
    "libtorrent-stubs>=0.0.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-textual-snapshot>=1.0.0",
    "respx>=0.22.0",
    "textual-dev>=1.7.0",
]


[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
